Added model, migrations, dbcontext, views and controller

--- a/TextBin/appsettings.json
+++ b/TextBin/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TextBinContext": "Server=(localdb)\\mssqllocaldb;Database=TextBinContext-226fc446-c915-44d3-8c1d-a03e73dc3152;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
